--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple authentication project using passport.js.",
   "main": "index.js",
   "scripts": {
+    devStart:"nodemon index.js"
     "test": "test"
   },
   "keywords": [
@@ -13,5 +14,14 @@
     "authentication"
   ],
   "author": "Sourabh Roy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "passport": "^0.6.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.20"
+  }
 }
